tests/fixtures/lua54/errors/require_after_code/input/main.lua
print("hi")
local x = require("foo")

return x
